<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >

		 <include
		     android:id="@+id/include_top_main"
		     android:layout_width="match_parent"
		     android:layout_height="110dip"
		     layout="@layout/include_top_main_02" />

    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="37dip"
	    android:background="#fff"
	    >

        <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dip"
	        android:layout_gravity="center_vertical"
	        android:background="@drawable/title_bulet"/>

        <TextView 
	  	    android:layout_width="wrap_content"
	  	    android:layout_height="wrap_content"
	  	    android:layout_gravity="center_vertical"
	  	    android:text="@string/posting_image"
	  	    android:textSize="16dip"
	  	    android:textStyle="bold"
	  	    android:textColor="#161616"/>
    </LinearLayout>
	<View
	  	    android:layout_width="fill_parent"
	  	    android:layout_height="2dp"
	  	    android:background="#342f2a" />
    <ScrollView        
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbarStyle="outsideOverlay" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            style="@style/body">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="33dp" >

                <TextView
                    style="@style/label"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:text="@string/image" />

                <Button
                    android:id="@+id/btnSelectImg"
                    style="@style/btn.small.normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_img" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:orientation="horizontal"
                android:paddingRight="33dp" >

                <TextView
                    style="@style/label"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:text="@string/title" />

                <EditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_form_text"
                    android:hint="@string/title_description"
                    android:maxEms="100"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingRight="33dp" >

                <TextView
                    style="@style/label"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:text="@string/content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_form_text"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/imgContent"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"                        
                        android:contentDescription="@string/entry_image"
                        android:scaleType="fitCenter"
                        android:paddingBottom="10dp"
                        android:visibility="gone"/>

                    <EditText
                        android:id="@+id/etContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="4000"
                        android:gravity="top"
                        android:hint="@string/content_description"
                        android:minLines="5"
                         />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" 
                android:layout_marginTop="18dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dip"
                    android:text="@string/bullet"
                    android:textColor="#AB9F90"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tvContentsCopyright"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"                    
                    android:text="@string/event_contents_copyright"
                    android:textColor="#161616"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutBtnGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnCancel"
                    style="@style/btn.large.weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/btnSubmit"
                    style="@style/btn.large.weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/submit" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.ak.android.akplaza.maintab.BottomTab
        android:id="@+id/bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>